--- a/product-detail/package.json
+++ b/product-detail/package.json
@@ -12,17 +12,19 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1",
+    "react-router-dom": "^7.9.4",
     "ui-library": "file:../ui-library"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
+    "@types/connect-history-api-fallback": "^1.5.4",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "connect-history-api-fallback": "^2.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
