--- a/ui-library/package.json
+++ b/ui-library/package.json
@@ -1,19 +1,33 @@
 {
   "name": "ui-library",
   "version": "1.0.0",
- "main": "dist/ui-library.umd.js",
-"module": "dist/ui-library.es.js",
-"types": "dist/types/index.d.ts",
-"files": ["dist"],
-"scripts": {
-  "dev": "vite",
-  "build:types": "tsc -p tsconfig.build.json",
-  "build:bundle": "vite build",
-  "build": "npm run build:bundle && npm run build:types",
-  "storybook": "storybook dev -p 6006",
-  "build-storybook": "storybook build"
-}
-,
+  "main": "dist/ui-library.umd.js",
+  "module": "dist/ui-library.es.js",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/ui-library.es.js",
+      "require": "./dist/ui-library.umd.js",
+      "default": "./dist/ui-library.es.js"
+    },
+    "./dist/index.css": "./dist/index.css",
+    "./index.css": "./dist/index.css",
+    "./package.json": "./package.json"
+  },
+  "style": "./dist/index.css",
+  "scripts": {
+    "dev": "vite",
+    "build:types": "tsc -p tsconfig.build.json",
+    "build:bundle": "vite build",
+    "build": "npm run build:bundle && npm run build:types",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "vitest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,12 +39,17 @@
     "@storybook/addon-onboarding": "^9.1.6",
     "@storybook/addon-vitest": "^9.1.6",
     "@storybook/react-vite": "^9.1.6",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.5.2",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "cpy-cli": "^6.0.0",
+    "jsdom": "^27.0.1",
     "playwright": "^1.55.0",
     "postcss": "^8.5.6",
     "rollup": "^4.52.0",
@@ -38,6 +57,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.6",
+    "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
