--- a/ui-library/package.json
+++ b/ui-library/package.json
@@ -26,7 +26,7 @@
     "build": "npm run build:bundle && npm run build:types",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -37,7 +37,6 @@
     "@storybook/addon-a11y": "^9.1.6",
     "@storybook/addon-docs": "^9.1.6",
     "@storybook/addon-onboarding": "^9.1.6",
-    "@storybook/addon-vitest": "^9.1.6",
     "@storybook/react-vite": "^9.1.6",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
