--- a/ui-library/package.json
+++ b/ui-library/package.json
@@ -16,7 +16,8 @@
     },
     "./dist/index.css": "./dist/index.css",
     "./index.css": "./dist/index.css",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./tailwind-preset": "./tailwind-preset.js"
   },
   "style": "./dist/index.css",
   "scripts": {
@@ -54,7 +55,7 @@
     "rollup": "^4.52.0",
     "storybook": "^9.1.6",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vite": "^7.1.6",
     "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^3.2.4"
@@ -62,7 +63,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5"
   },
   "peerDependencies": {
     "react": "^19.1.1",
