--- a/container/package.json
+++ b/container/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
@@ -17,6 +19,8 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
+    "@types/axios": "^0.9.36",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/react-router-dom": "^5.3.3",
